# iex_parser

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: deep_pcap_to_json.py  load_json.py  read_deep.py  read_tops.py
iex_parser/: __init__.py  conversions.py  iex_to_csv.py  iex_to_json.py  messages.py  parser.py
src/iex_parser/: conversions.py  messages.py  parser.py
